# kdutia.github.io

./: .gitignore  CNAME  README.md  downstyler.css  home.html  hugo.toml  index.html  interval-timer.html  style.css
Content/: bootstrap-theme.min.css  bootstrap.css  bootstrap.min.css
Old/: Home.aspx  Home.aspx.designer.cs  Music.aspx  Music.aspx.designer.cs  Portfolio.csproj  analyticstracking.php  index - Copy.php  index.php  music.php  packages.config
Old/Properties/: AssemblyInfo.cs
Old/nbproject/private/: private.properties  private.xml
_layouts/: default.html
calendar/: get-all-day-events.py  get-google-refresh-token.py  gigs.txt  pyproject.toml
content/: _index.md
content/blog/: data-science-is-the-same--just-a-bit-more-ambitious.md  hello-world.md
layouts/partials/: custom_head.html
public/: 404.html  index.html  index.xml  sitemap.xml
public/blog/: index.html  index.xml
public/blog/hello-world/: index.html
public/categories/: index.html  index.xml
public/tags/: index.html  index.xml
